fix dark button border color contrast

--- a/assets/main.css
+++ b/assets/main.css
@@ -257,5 +257,12 @@ button:focus {
 @media (prefers-color-scheme: dark) {
     button {
         color: var(--text);
+
+    }
+
+    button:hover,
+    button:active,
+    button:focus {
+        border: 1px solid var(--light-primary);
     }
 }
